# pyxem

./: .coveragerc  .flake8  .gitatrributes  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CNAME  CONTRIBUTING.md  CONTRIBUTING.rst  CoM  CoM.py  PULL_REQUEST_TEMPLATE.md  README  README.md  README.rst  RELEASE.rst  State_of_Branch.md  appveyor.yml  centrecalibration.py  conda_list_requirements.txt  conftest.py  file_01.pickle  find_centre_using_image_flip.py  find_centre_using_split_compare.py  index.html  laue_zone_modelling.py  laue_zone_plotting.py  laue_zone_processing.py  laue_zone_processing_tools.py  laue_zone_tools.py  loaddata.py  old_code.py  package-list-linux.txt  pepstorm.bat  (+12 more)
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
archive/dtr/: .gitignore  COPYING  Makefile.am  config.h.in  configure.ac  drawing_area
archive/dtr/data/: Makefile.am
archive/dtr/src/: basis.h  cache.c  cache.h  control.c  control.h  dirax.h  displaywindow.c  displaywindow.h  glbits.h  image.h  imagedisplay.c  imagedisplay.h  itrans-stat.h  itrans-threshold.h  itrans.c  main.c  main.h  mapping.c  mapping.h  mrc.c  mrc.h  qdrp.c  readpng.c  readpng.h  refine.c  refine.h  refinetest2d.c  refinetest3d1.c  refinetest3d2.c  refinetest3d3.c  reflections.h  reproject.c  reproject.h  trackball.c  utils.c  utils.h
dev/: _pyprismatic_notes  changelog.html  constants.py  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
diffsims/: CONTRIBUTING.rst  README.rst  pepstorm.sh  setup.py
doc/: EXAMPLES_BUILD_OPTIMIZATION.md  Makefile  analysing_dpc_datasets.rst  analysing_holz_datasets.rst  analysing_nbed_data.rst  api.rst  bibliography.bib  bibliography.rst  check-demos.sh  cite.rst  citing_papers.bib  conf.py  conftest.py  contributing.rst  fem_analysis.rst  generate_test_data.rst  index.rst  install.rst  intro.rst  loading_data.rst  misc_functions.rst  open_datasets.rst  pyxem-demos  reference.rst  refernce.rst  related_projects.rst  start_pixstem.rst  using_pixelated_stem_class.rst
docs/: Makefile  requirements.txt
docs_redirect/: Makefile  conf.py  index.rst
dtr/: autogen.sh  config.h.in~
dtr/src/: .gitignore  Makefile.am  basis.c  dirax.c  displaywindow.c~  displaywindow.h~  glbits.c  glbits.c~  glbits.h~  gtk-valuegraph.c  gtk-valuegraph.h  image.c  imagedisplay.c~  intensities.c  intensities.h  itrans-stat.c  itrans-threshold.c  itrans-zaefferer.c  itrans-zaefferer.c~  itrans-zaefferer.h  itrans.c~  itrans.h  mrc.c~  prealign.c  prealign.h  qdrp.h  reflections.c  reproject.c~
examples/: README.rst
files_for_tests/: tempfile_for_big_data_util_testing.hspy
fpd_data_processing/: api.py  dask_tools.py  diffraction_test_data_generator.py  diffraction_tools.py  dpc_tools.py  dummy_data.py  io_tools.py  laue_zone_modelling.py  lazy_tools.py  make_diffraction_test_data.py  pixelated_stem_class.py  pixelated_stem_tools.py  radial.py  stem_diffraction_radial_integration.py
higher_order_laue_zone_calculation/: laue_zone_plotting.py  laue_zone_tools.py  stem_diffraction_radial_integration.py
io/: mib.py
pixstem/: api.py  cluster_tools.py  dask_test_data.py  dask_tools.py  diffraction_tools.py  dummy_data.py  fem_tools.py  io_tools.py  lazy_tools.py  make_diffraction_test_data.py  marker_tools.py  pixelated_stem_class.py  pixelated_stem_tools.py  radial.py  ransac_ellipse_tools.py
pycrystem/: __init__.py  crystallographic_map.py  diffraction_component.py  diffraction_generator.py  diffraction_signal.py  diffraction_vectors.py  expt_utils.py  indexation_generator.py  library_generator.py  orientation_map.py  scalable_reference_pattern.py  sim_utils.py  tensor_field.py  tensor_field2d.py
pyxem/: .zenodo.json  __init__.py  __init__.pyi  atomic_scattering_component.py  common.py  conftest.py  crystallographic_map.py  diffraction_component.py  diffraction_generator.py  diffraction_profile.py  diffraction_signal.py  diffraction_vectors.py  hyperspy_extension.yaml  indexation_generator.py  library_generator.py  release_info.py  scalable_reference_pattern.py  tensor_field.py  version.py
pyxem_examples/: .gitignore  PyCrystEM - IUCr2017 Demo.ipynb  PyCrystEM - Intro, Imaging & Machine Learning.ipynb  PyCrystEM - Orientation & Strain Mapping.ipynb  Template_Matching_Basic.ipynb  Template_Matching_Intermediate.ipynb  automated vdf imaging & segmentation.ipynb  graphite.cif  marker_attachment_testbook.ipynb
src/: build.bat  radialprofile.pyx  setup.py
tests/: conftest.py  test_diffraction_component.py  test_diffraction_generator.py  test_diffraction_signal.py  test_diffraction_simulation.py  test_diffraction_vectors.py  test_electron_diffraction.py  test_indexation_generator.py  test_laue_zone_plotting.py  test_library_generator.py  test_marker_plotting.py  test_orientation_mapping.py  (+13 more)
(+1030 files in other folders)
