EXTRA_DIST = configure src/displaywindow.h src/trackball.h src/reflections.h src/control.h src/readpng.h src/mrc.h \
		src/imagedisplay.h src/main.h data/displaywindow.ui src/utils.h src/itrans.h src/qdrp.h src/cache.h \
		src/itrans-threshold.h src/basis.h src/itrans-zaefferer.h src/itrans-stat.h src/mapping.h \
		src/reproject.h src/prealign.h src/dirax.h src/image.h src/refine.h src/gtk-valuegraph.h \
		src/intensities.h src/glbits.h src/gtk-valuegraph.h
SUBDIRS = src data
TESTS = src/refinetest2d src/refinetest3d1 src/refinetest3d2 src/refinetest3d3

